2012-08-08  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add section on common differences.
	
2012-08-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: For consistency to other changes, rename
	'fru-parse' sub-library in libfreeipmi to 'fru' library.  All
	appropriately function names, macros, etc. updated appropriately.

	* ipmi-pet/, ipmi-fru/: Update appropriately.

	* libfreeipmi/fru/ipmi-fru.c,
	libfreeipmi/include/freeipmi/fru/ipmi-fru.h (ipmi_fru_read_multirecord_record_type_id):
	New function.  Rename from
	ipmi_fru_read_multirecord_record_type.
	
2012-08-06  Albert Chu <chu11@llnl.gov>

	* Merge intelnm15 branch.

	* ipmi-oem/: Add IntelNM get-node-manager-capabilities,
	node-manager-policy-control, get-node-manager-policy,
	set-node-manager-policy, remove-node-manager-policy,
	get-node-manager-alert-thresholds,
	set-node-manager-alert-thresholds,
 	get-node-manager-policy-suspend-periods,
 	set-node-manager-policy-suspend-periods,
	set-node-manager-power-draw-range,
	get-node-manager-alert-destination,
	set-node-manager-alert-destination.

	* libfreeipmi/: Fix Intel NM bugs.

	* ipmi-pef-config/: Support volatile alert string 0 and lan alert
	destination 0.
	
2012-08-03  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add Wistron to OEM list.
	
2012-07-31  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-oem-spec.h, ipmi-oem/:
	Fix macro naming.

	* ipmi-oem/: Support Wistron read/write/clear-proprietary-string.

	* ipmi-fru/: Support Wistron OEM FRU record. 

	* libfreeipmi/fru-parse/ipmi-fru-parse.c,
	libfreeipmi/include/freeipmi/fru-parse/ipmi-fru-parse.h (ipmi_fru_parse_read_multirecord_record_type):
	New function.

	* libfreeipmi/include/freeipmi/record-format/ipmi-fru-oem-record-format.h: New file.
	
2012-07-30  Albert Chu <chu11@llnl.gov>

	* configure.ac: Prep for beta release.

	* README, man/freeipmi.7.pre.in: Update with ipmiseld information.

	* libfreeipmi/include/Makefile.am: Add missing files.
	